--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 *.sublime-project
 .svn/
 admin/application/logs/log-2016-12-12.php
+admin/application/logs/log-2016-12-16.php
