--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 .svn/
 admin/application/logs/log-2016-12-12.php
 admin/application/logs/log-2016-12-16.php
+admin/application/views/layout/category_type_form.php
