--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 admin/application/logs/log-2016-12-12.php
 admin/application/logs/log-2016-12-16.php
 admin/application/views/layout/category_type_form.php
+admin/application/models/Bank_list_model.php.rej
+admin/application/views/pages/category_form.php.rej
