--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ admin/application/logs/log-2016-12-12.php
 admin/application/logs/log-2016-12-16.php
 admin/application/views/layout/category_type_form.php
 admin/application/logs/log-2016-12-17.php
+admin/application/logs/log-2016-12-18.php
