Delete Category and sub of Category(Blog) and Sub Blog(Blog Value)

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 admin/application/logs/log-2016-12-17.php
 admin/application/logs/log-2016-12-19.php
+admin/application/logs/log-2016-12-20.php
+.idea/casaregister.iml
+.idea/New folder/workspace.xml
+.idea/New folder/vcs.xml
+.idea/New folder/modules.xml
+.idea/New folder/encodings.xml
+.idea/.name
