--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ admin/application/logs/log-2016-12-20.php
 .idea/.name
 admin/application/controllers/Log.php
 admin/application/views/pages/log.php
+admin/assets/img/blog/10/10/download.jpg
+admin/application/logs/log-2016-12-21.php
