--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ admin/application/logs/log-2016-12-21.php
 admin/application/logs/log-2016-12-22.php
 admin/application/logs/log-2016-12-23.php
 admin/application/logs/log-2016-12-24.php
+.idea/misc.xml
