--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,35 @@ admin/application/logs/log-2016-12-22.php
 admin/application/logs/log-2016-12-23.php
 admin/application/logs/log-2016-12-24.php
 .idea/misc.xml
+admin/application/hooks/log_Profiling.php
+admin/application/logs/Profiling/2016-12-23-07-11-54-1482477114_login_index.html
+admin/application/logs/Profiling/2016-12-23-07-11-56-1482477116_login_employee_login.html
+admin/application/logs/Profiling/2016-12-23-07-11-56-1482477116_login_validateForm.html
+admin/application/logs/Profiling/2016-12-23-07-11-58-1482477118_login_employee_login.html
+admin/application/logs/Profiling/2016-12-23-07-11-58-1482477118_login_validateForm.html
+admin/application/logs/Profiling/2016-12-23-07-11-59-1482477119_dashboard_index.html
+admin/application/logs/Profiling/2016-12-23-07-12-01-1482477121_dashboard_index.html
+admin/application/logs/Profiling/2016-12-23-07-12-03-1482477123_list_banner_get_paging.html
+admin/application/logs/Profiling/2016-12-23-07-12-03-1482477123_list_banner_index.html
+admin/application/logs/Profiling/2016-12-23-07-15-09-1482477309_list_blog_get_paging.html
+admin/application/logs/Profiling/2016-12-23-07-15-09-1482477309_list_blog_index.html
+admin/application/logs/Profiling/2016-12-23-07-15-30-1482477330_list_banner_get_paging.html
+admin/application/logs/Profiling/2016-12-23-07-15-30-1482477330_list_banner_index.html
+admin/application/logs/Profiling/2016-12-23-07-27-47-1482478067_banner_index.html
+admin/application/logs/Profiling/2016-12-23-07-28-01-1482478081_banner_index.html
+admin/application/logs/Profiling/2016-12-23-08-50-15-1482483015_login_index.html
+admin/application/logs/Profiling/2016-12-23-08-50-41-1482483041_login_validateForm.html
+admin/application/logs/Profiling/2016-12-23-08-51-47-1482483107_login_validateForm.html
+admin/application/logs/Profiling/2016-12-23-08-54-47-1482483287_dashboard_index.html
+admin/application/logs/Profiling/2016-12-23-08-54-48-1482483288_dashboard_index.html
+admin/application/logs/Profiling/2016-12-23-08-54-50-1482483290_dashboard_index.html
+admin/application/logs/Profiling/2016-12-23-08-56-31-1482483391_list_bank_index.html
+admin/application/logs/Profiling/2016-12-23-08-56-32-1482483392_list_bank_get_paging.html
+admin/application/logs/Profiling/2016-12-23-08-56-44-1482483404_list_category_type_get_paging.html
+admin/application/logs/Profiling/2016-12-23-08-56-44-1482483404_list_category_type_index.html
+admin/assets/img/banner/16/download.jpg
+admin/assets/img/banner/null/20130529211358.jpg
+admin/assets/img/banner/null/download.jpg
+admin/logs/log-2016-12-23.php
+admin/logs/log-2016-12-24.php
+admin/session/ti_session5hcvfdikq3t6oiqb61r472ev3ddnqkkd
