แก้ไขคำสั่ง sql

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ admin/assets/img/banner/null/download.jpg
 admin/logs/log-2016-12-23.php
 admin/logs/log-2016-12-24.php
 admin/session/ti_session5hcvfdikq3t6oiqb61r472ev3ddnqkkd
+admin/application/logs/log-2016-12-25.php
