--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ admin/logs/log-2016-12-23.php
 admin/logs/log-2016-12-24.php
 admin/session/ti_session5hcvfdikq3t6oiqb61r472ev3ddnqkkd
 admin/application/logs/log-2016-12-25.php
+admin/assets/img/banner/null/15540819_1144363362267253_3228894940755017727_o.jpg
