--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ admin/session/ti_session5hcvfdikq3t6oiqb61r472ev3ddnqkkd
 admin/application/logs/log-2016-12-25.php
 admin/assets/img/banner/null/15540819_1144363362267253_3228894940755017727_o.jpg
 admin/assets/img/config/1/10389706_10207496597926420_8902592759800252622_n.jpg
+admin/application/logs/log-2016-12-26.php
