- แก้ไข ไม่ลบ category,bank - แก้ไข blog edit ไม่เข้า log

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ admin/application/logs/log-2016-12-25.php
 admin/assets/img/banner/null/15540819_1144363362267253_3228894940755017727_o.jpg
 admin/assets/img/config/1/10389706_10207496597926420_8902592759800252622_n.jpg
 admin/application/logs/log-2016-12-26.php
+admin/assets/img/banner/17/download.jpg
+admin/assets/img/config/1/820-football-ampamp-stadium-wallpaper.jpg
+admin/assets/img/config/1/download.jpg
