--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ admin/application/logs/log-2016-12-26.php
 admin/assets/img/banner/17/download.jpg
 admin/assets/img/config/1/820-football-ampamp-stadium-wallpaper.jpg
 admin/assets/img/config/1/download.jpg
+admin/application/000.txt
