List and Config model

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ admin/assets/img/config/1/820-football-ampamp-stadium-wallpaper.jpg
 admin/assets/img/config/1/download.jpg
 admin/application/000.txt
 admin/application/logs/log-2016-12-27.php
+.idea/encodings.xml
