--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ admin/assets/img/config/1/download.jpg
 admin/application/000.txt
 admin/application/logs/log-2016-12-27.php
 .idea/encodings.xml
+.idea/workspace.xml
