--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ admin/application/000.txt
 admin/application/logs/log-2016-12-27.php
 .idea/encodings.xml
 .idea/workspace.xml
+admin/application/logs/log-2016-12-28.php
