--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,9 @@ admin/application/logs/log-2016-12-27.php
 .idea/encodings.xml
 .idea/workspace.xml
 admin/application/logs/log-2016-12-28.php
+admin/application/logs/log-2016-12-29.php
+admin/assets/img/banner/7/home_banner_11.jpeg
+admin/assets/img/blog/37/112/news_587.jpeg
+admin/assets/img/config/1/home_banner_12.jpeg
+admin/assets/img/config/1/home_banner_13.jpeg
+admin/assets/img/config/2/Daisies-wallpaper.jpg
